Zero debug build fails on "assert(labs(istate->_stack_base - istate->_stack_limit) == (istate->_method->max_stack() + extra_stack_entries + 1)) failed: bad stack limit"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • openjdk7u
    • Affects Version/s: openjdk7u
    • Component/s: hotspot
    • b00
    • generic
    • generic

        make[6]: Leaving directory '/mnt/builder/openjdk7-debug/hotspot/outputdir/linux_amd64_zero/jvmg'
        cd linux_amd64_zero/jvmg && ./test_gamma
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/bytecodeInterpreter.cpp:524
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/andrew/projects/openjdk/upstream/jdk7/hotspot/src/share/vm/interpreter/bytecodeInterpreter.cpp:524), pid=32187, tid=140530574698240
        # assert(labs(istate->_stack_base - istate->_stack_limit) == (istate->_method->max_stack() + extra_stack_entries + 1)) failed: bad stack limit
        #
        # JRE version: (6.0_41-b41) (build )
        # Java VM: OpenJDK 64-Bit Zero VM (24.95-b00-jvmg interpreted mode linux-amd64 )
        # Core dump written. Default location: /mnt/builder/openjdk7-debug/hotspot/outputdir/linux_amd64_zero/jvmg/core or core.32187
        #
        # An error report file with more information is saved as:
        # /mnt/builder/openjdk7-debug/hotspot/outputdir/linux_amd64_zero/jvmg/hs_err_pid32187.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #
        Using java runtime at: /usr/lib/jvm/icedtea-6/jre
        Current thread is 140530574698240
        Dumping core ...

              Assignee:
              Andrew Hughes
              Reporter:
              Andrew Hughes
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: