8197801: Zero debug build fails on "assert(labs(istate->_stack_base - istate->_stack_limit) == (istate->_method->max_stack() + extra_stack_entries + 1)) failed: bad stack limit"

Use the value of methodOopDesc::extra_stack_entries() rather than hardcoding a value.

Reviewed-by: aph